--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
             
             <div class="tab-content" id="nav-tabContent">
 
-                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"><br/>
                     <div class="row">
                         <div class="col-lg-2">
-                            <br><img src="src/img/list.svg" class="rounded float-left w-100" id="list-img" alt="ReciPie">
+                            <img src="src/img/list.svg" class="rounded float-left w-100" id="list-img" alt="ReciPie">
                         </div>
                         <div class="col-lg-10">
-                            <br/><h4>Ingredients list</h4>
+                            <h4>Ingredients list</h4>
                             Create a list with the ingredients you intend to use in your next recipe. The more ingredients you enter in the list, the more accurate the recipes we will show. Too specific research may not produce results.<br/><br/>
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" id="newIngredient" placeholder="" aria-label="" aria-describedby="basic-addon1" onkeypress="isEnterPress(event, 'newIngredient', 'ingredientsList')">
                             </div>
-                            <ul id="ingredientsList" class="list-group list-group-flush"><!-- ingredients list will shown here --></ul>
+                            <ul id="ingredientsList" class="list-group list-group-flush"><!-- ingredients list will be shown here --></ul>
                         </div>
                     </div>
                 </div>
@@ -69,50 +69,50 @@
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" id="newUndesired" placeholder="" aria-label="" aria-describedby="basic-addon1" onkeypress="isEnterPress(event, 'newUndesired', 'undesiredsList')">
                     </div>
-                    <ul id="undesiredsList" class="list-group list-group-flush"><!-- ingredients list will shown here --></ul>
+                    <ul id="undesiredsList" class="list-group list-group-flush"><!-- undesireds list will shown here --></ul>
                     <div class="row">
                         <div class="col-lg-6"><hr>
                             <h4>Health and diet stuff</h4>
                             We know how important it is to choose carefully what we eat, for this we select the recipes according to your diet. <br/><br/>
                             <div class="row">
-                                <div class="col-lg-6">
+                                <div class="col-lg-6" id="health-parameters">
                                     <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck1" name="vegan">
                                         <label class="custom-control-label custom-control-label" for="customCheck1">Vegan</label>
                                     </div>
                                     <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck2">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck2" name="vegetarian">
                                         <label class="custom-control-label" for="customCheck2">Vegetarian</label>
                                     </div>
                                     <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck3">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck3" name="sugar-conscious">
                                         <label class="custom-control-label" for="customCheck3">Sugar conscious</label>
                                     </div>
                                     <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck4">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck4" name="peanut-free">
                                         <label class="custom-control-label" for="customCheck4">Peanut free</label>
                                     </div>
                                     <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customCheck5">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck5" name="alcohol-free">
                                         <label class="custom-control-label" for="customCheck5">Alcohol free</label>
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <div class="col-lg-6" id="diet-parameters">
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadio1">Balanced diet</label>
+                                        <input type="radio" id="balanced" name="customRadio" class="custom-control-input">
+                                        <label class="custom-control-label" for="balanced">Balanced diet</label>
                                     </div>
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadio2">High protein diet</label>
+                                        <input type="radio" id="high-protein" name="customRadio" class="custom-control-input">
+                                        <label class="custom-control-label" for="high-protein">High protein diet</label>
                                     </div>
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio3" name="customRadio" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadio3">Low fat diet</label>
+                                        <input type="radio" id="low-fat" name="customRadio" class="custom-control-input">
+                                        <label class="custom-control-label" for="low-fat">Low fat diet</label>
                                     </div>
                                     <div class="custom-control custom-radio">
-                                        <input type="radio" id="customRadio4" name="customRadio" class="custom-control-input">
-                                        <label class="custom-control-label" for="customRadio4">Low carb diet</label>
+                                        <input type="radio" id="low-carb" name="customRadio" class="custom-control-input">
+                                        <label class="custom-control-label" for="low-carbs">Low carb diet</label>
                                     </div>
                                 </div>
                             </div>
@@ -120,7 +120,7 @@
                         <div class="col-lg-6"><hr>
                             <h4>Max number of ingredients</h4>
                             Each recipe we show you will have a list of ingredients to prepare it. Set a maximum number of ingredients to avoid overly complex recipes.<br/><br/>
-                            <input type="range" class="custom-range" min="0" max="20" id="slider" oninput="maxIngredients()"><br/><br/>
+                            <input type="range" class="custom-range" min="3" max="20" id="slider" oninput="maxIngredients()"><br/><br/>
                             <button type="button" class="btn" id="max-ingredients-button">
                                 We will show you recipe with <span class="badge badge-light" id="max-ingredients">9</span> as max number of ingredients.
                             </button>
@@ -133,8 +133,8 @@
         <div class="fixed-bottom" id="search-btn-container">
             <div class="container">
                 <div class="float-right">
-                    <a href="results.html">
-                        <button type="button" class="btn" id="get-started-btn">Search recipes</button>
+                    <a href="#">
+                        <button type="button" class="btn" id="get-started-btn" onclick="apiRequest()">Search recipes</button>
                     </a>
                 </div>
             </div>
@@ -145,8 +145,9 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <!-- Personal script -->
-        <script src="src/js/carousel.js"></script>
         <script src="src/js/lists.js"></script>
         <script src="src/js/slider.js"></script>
+        <script src="src/js/private.js"></script>
+        <script src="src/js/request.js"></script>
     </body>
 </html>
