--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <div class="container">
             <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                  <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Ingredients</a>
-                  <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Preferences</a>
+                  <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-ingredients" role="tab" aria-controls="nav-ingredients" aria-selected="true">Ingredients</a>
+                  <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-preferences" role="tab" aria-controls="nav-preferences" aria-selected="false">Preferences</a>
                 </div>
             </nav>
             
             <div class="tab-content" id="nav-tabContent">
 
-                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"><br/>
+                <div class="tab-pane fade show active" id="nav-ingredients" role="tabpanel" aria-labelledby="nav-ingredients-tab"><br/>
                     <div class="row">
                         <div class="col-lg-2">
                             <img src="src/img/list.svg" class="rounded float-left w-100" id="list-img" alt="ReciPie">
@@ -56,7 +56,7 @@
                 </div>
 
 
-                <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab"><br/>
+                <div class="tab-pane fade" id="nav-preferences" role="tabpanel" aria-labelledby="nav-preferences-tab"><br/>
                     <div class="alert alert-warning alert-dismissible fade show" role="alert">
                         <h4>Bibbidi bobbidi boo that's a warning for you</h4> 
                         An excessive amount of restrictions could narrow the search to the point of not producing results.
@@ -149,5 +149,6 @@
         <script src="src/js/slider.js"></script>
         <script src="src/js/private.js"></script>
         <script src="src/js/request.js"></script>
+        <script src="src/js/localSession.js"></script>
     </body>
 </html>
